hack/kubernetes/volume-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-test
  labels:
    app.kubernetes.io/name: volume-test
    app.kubernetes.io/part-of: kube-pet-node
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: volume-test
      app.kubernetes.io/part-of: kube-pet-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: volume-test
        app.kubernetes.io/part-of: kube-pet-node
    spec:
      automountServiceAccountToken: false
      containers:
      - name: app
        image: alpine
        command:
        - sh
        - -euxc

        - |
          while true
          do
            ls /root
            sleep 15s
          done

        volumeMounts:
        - name: cf
          mountPath: /root/configmap
      volumes:
      - name: cf
        configMap:
          name: pet-configmap

      nodeSelector:
        purpose: pet
      tolerations:
      - key: kubernetes.io/pet-node
        operator: Exists
        effect: NoSchedule
